--- a/Plugin.vcxproj.filters
+++ b/Plugin.vcxproj.filters
@@ -2423,5 +2423,20 @@
     <ClInclude Include="src\Public\Plugin.h">
       <Filter>Source Files\Public</Filter>
     </ClInclude>
+    <ClInclude Include="src\Commands.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Hooks.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Timers.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Utils.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Tests.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
